--- a/src/app/main/following/following.component.html
+++ b/src/app/main/following/following.component.html
@@ -11,6 +11,26 @@
     <form class="form-inline my-2 my-lg-0" (ngSubmit) = "addfriend(addForm.dirty)" #addForm="ngForm">
       <input class="form-control" type="text" placeholder="Add friends" [(ngModel)]="newfriendName" name="add" aria-label="Search" size=20%>
       <button class="btn btn-primary my-2 my-sm-0" type="submit">Add</button>
+      <div *ngIf="(addStatus === 1) && (newfriendName.length > 0)" class="alert alert-success">
+        <div>
+          add success
+        </div>
+      </div>
+      <div *ngIf="(addStatus === -1) && (newfriendName.length > 0)" class="alert alert-danger">
+          <div>
+            user doesn't exist
+          </div>
+      </div>
+      <div *ngIf="(addStatus === -2) && (newfriendName.length > 0)" class="alert alert-danger">
+        <div>
+           already followed this user
+        </div>
+      </div>
+      <div *ngIf="(addStatus === -3) && (newfriendName.length > 0)" class="alert alert-danger">
+          <div>
+            you are searching yourself
+          </div>
+      </div>
       <div *ngIf="(addForm.dirty || addForm.touched) && (newfriendName.length < 1)" class="alert alert-danger">
         <div>
         username is empty
