--- a/src/app/main/self/self.component.html
+++ b/src/app/main/self/self.component.html
@@ -1,14 +1,15 @@
 <div class="frame">
   <div class="row">
-    <a class="nav-link" id="logout" href="#/landing"><u>Logout</u></a>
-    <a class="nav-link" id="profile" href="#/profile"><u>Profile</u></a>
+    <a class="nav-link" id="logout" href="#/landing" (click)="logout()"><u>Logout</u></a>
+    <a class="nav-link" id="profile" href="#/profile" ><u>Profile</u></a>
   </div>
   <div class="picture">
-    <img class="potrait" src="https://pbs.twimg.com/profile_images/1012320236333355010/sLSWR8fX_400x400.jpg">
+    <h4>{{currentUser.accountName}}</h4>
+    <img class="potrait" [src]='currentUser.portrait'>
   </div>
   <div class="status">
-    <h5 *ngIf="!newHeadline">What are you thinking?</h5>
-    <h5 *ngIf="newHeadline">{{newHeadline}}</h5>
+    <h5 *ngIf="!currentUser.headline">What are you thinking?</h5>
+    <h5 *ngIf="currentUser.headline">{{currentUser.headline}}</h5>
   </div>
   <div>
     <form (ngSubmit) = "addHeadline(headlineForm.valid)" #headlineForm=ngForm>
