--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,6 @@
-/* body{
+body{
   background-image: url("https://www.collegechoice.net/wp-content/uploads/2016/05/Rice-University-761x571.jpg");
-} */
+}
 
 .frame{
   background-color:rgba(252, 252, 252, 0.883);
