--- a/src/app/main/self/self.component.html
+++ b/src/app/main/self/self.component.html
@@ -4,16 +4,16 @@
     <a class="nav-link" id="profile" href="#/profile" ><u>Profile</u></a>
   </div>
   <div class="picture">
-    <h4>{{currentUser.accountName}}</h4>
-    <img class="potrait" [src]='currentUser.portrait'>
+    <h4>{{username}}</h4>
+    <img class="potrait" [src]='avatar'>
   </div>
   <div class="status">
-    <h5 *ngIf="!currentUser.headline">What are you thinking?</h5>
-    <h5 *ngIf="currentUser.headline">{{currentUser.headline}}</h5>
+    <h5 *ngIf="!headline">What are you thinking?</h5>
+    <h5 *ngIf="headline">{{headline}}</h5>
   </div>
   <div>
-    <form (ngSubmit) = "addHeadline(headlineForm.valid)" #headlineForm=ngForm>
-      <input type="text" class="form-control" id="status" placeholder="New Status" [(ngModel)]="headline" name="newHeadline" aria-label="Recipient's username" aria-describedby="basic-addon2">
+    <form (ngSubmit) = "updateHeadline(headlineForm.valid)" #headlineForm=ngForm>
+      <input type="text" class="form-control" id="status" placeholder="New Status" [(ngModel)]="headlineText" name="newHeadline" aria-label="Recipient's username" aria-describedby="basic-addon2">
       <button type="submit" class="btn btn-primary">update</button>
     </form>
   </div>
