--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -21,13 +21,13 @@
         <div class="frame">
             <h1>Current Info</h1>
             <ul class="list-group">
-                <li class="list-group-item">Account Name: {{user?.accountName}}</li>
-                <li class="list-group-item">Display Name: {{user?.displayName}}</li>
-                <li class="list-group-item">Email: {{user?.email}}</li>
-                <li class="list-group-item">Phone Number: {{user?.phoneNumber}}</li>
-                <li class="list-group-item">Date of Birth: {{user?.dateOfBirth}}</li>
-                <li class="list-group-item">Zipcode: {{user?.zipcode}}</li>
-                <li class="list-group-item">Password: {{user?.password}}</li>
+                <li class="list-group-item">Account Name: {{userAccountName}}</li>
+                <!--<li class="list-group-item">Display Name: {{user?.displayName}}</li>-->
+                <li class="list-group-item">Email: {{userEmail}}</li>
+                <li class="list-group-item">Phone Number: {{userPhoneNumber}}</li>
+                <li class="list-group-item">Date of Birth: {{userDob}}</li>
+                <li class="list-group-item">Zipcode: {{userZipcode}}</li>
+                <!--<li class="list-group-item">Password: {{user?.password}}</li>-->
               </ul>
           </div>
     </div>
@@ -35,10 +35,10 @@
         <div class="frame">
             <h1>Update Info</h1>
             <form  #updateForm="ngForm" (ngSubmit) = "onSubmit(updateForm.valid)" >
-                <div class='form-group'>
+                <!--<div class='form-group'>
                   <label for="displayName">Display Name:</label>
                   <input type="text" id="displayName" class="form-control" name="displayName" [(ngModel)]="displayNameText">
-                </div>
+                </div>-->
                 <div class='form-group'>
                   <label for="email">Email Address: </label>
                   <input type="text" id="email" class="form-control" name="email" #email=ngModel [(ngModel)]="emailText" email>
