--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -19,7 +19,7 @@
         </div>
       </div>
     </div>
-    <button type="submit" class="btn btn-primary" id='submit'>Log in</button>
+    <button type="submit" class="btn btn-primary" id='loginBtn'>Log in</button>
     <div *ngIf="isSubmit">
       <div *ngIf="isLogin !== undefined">
           <div *ngIf="!isLogin" class="alert alert-danger" id="login-error">
