--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,36 +1,38 @@
-<div class='frame'>
+<div class='card'>
+  <div class="card-body">
   <h1>Login</h1>
-  <form (ngSubmit) = "onSubmit(logForm.valid)" #logForm="ngForm">
-    <div class='form-group'>
-      <label for="uname">Username: </label>
-      <input type="text" id="uname" class="form-control" name="uname" [(ngModel)]="username" #uname=ngModel required>
-        <div *ngIf="uname.invalid && (uname.dirty || uname.touched)" class="alert alert-danger">
-          <div *ngIf="uname?.errors.required">
-            Account Name is required.
+    <form (ngSubmit) = "onSubmit(logForm.valid)" #logForm="ngForm">
+      <div class='form-group'>
+        <label for="uname">Username: </label>
+        <input type="text" id="uname" class="form-control" name="uname" [(ngModel)]="username" #uname=ngModel required>
+          <div *ngIf="uname.invalid && (uname.dirty || uname.touched)" class="alert alert-danger">
+            <div *ngIf="uname?.errors.required">
+              Account Name is required.
+            </div>
+          </div>
+      </div>
+      <div class='form-group'>
+        <label for="upass">Password: </label>
+        <input type="password" id="upass" class="form-control" name="upass" [(ngModel)]="password" #upass=ngModel required>
+        <div *ngIf="upass.invalid && (upass.dirty || upass.touched)" class="alert alert-danger">
+          <div *ngIf="upass?.errors.required">
+              Password is required.
           </div>
         </div>
-    </div>
-    <div class='form-group'>
-      <label for="upass">Password: </label>
-      <input type="password" id="upass" class="form-control" name="upass" [(ngModel)]="password" #upass=ngModel required>
-      <div *ngIf="upass.invalid && (upass.dirty || upass.touched)" class="alert alert-danger">
-        <div *ngIf="upass?.errors.required">
-            Password is required.
+      </div>
+      <button type="submit" class="btn btn-primary" id='loginBtn'>Log in</button>
+      <div *ngIf="isSubmit">
+        <div *ngIf="isLogin !== undefined">
+            <div *ngIf="!isLogin" class="alert alert-danger" id="login-error">
+                The username or password is incorrect
+              </div>
+              <div *ngIf="isLogin" class="alert alert-success" id="login-success">
+                welcome {{username}}!
+              </div>
         </div>
-      </div>
-    </div>
-    <button type="submit" class="btn btn-primary" id='loginBtn'>Log in</button>
-    <div *ngIf="isSubmit">
-      <div *ngIf="isLogin !== undefined">
-          <div *ngIf="!isLogin" class="alert alert-danger" id="login-error">
-              The username or password is incorrect
-            </div>
-            <div *ngIf="isLogin" class="alert alert-success" id="login-success">
-              welcome {{username}}!
-            </div>
-      </div>
 
-    </div>
-  </form>
+      </div>
+    </form>
+</div>
 </div>
 
