--- a/src/app/main/following/following.component.css
+++ b/src/app/main/following/following.component.css
@@ -1,17 +1,33 @@
-img{
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  width: 100px;
-  border: 1px solid #ddd;
-  border-radius: 4px;
-}
-
 .card {
-  padding: 10px;
-  margin: 10px;
+  margin-top: 20px;
+  text-align: center;
+  padding-top:10px;
+  padding-bottom:10px;
 }
 
-.card-body {
+.avatar {
+  vertical-align: middle;
+  width: 50px;
+  clip-path: circle();
+  border: 10px;
+  border-color: black
+}
+
+.following {
+  margin-top: 10px;
+}
+
+#search {
+  margin-top: 30px;
+}
+
+input {
+  margin-left: 40px;
+  margin-right: 5px;
+}
+
+#addingRes {
   text-align: center;
+  margin-left:50px;
+  width: 260px;
 }
