--- a/src/app/main/self/self.component.html
+++ b/src/app/main/self/self.component.html
@@ -1,21 +1,20 @@
-<div class="frame">
-  <div class="row">
-    <a class="nav-link" id="logout" href="#/landing" (click)="logout()"><u>Logout</u></a>
-    <a class="nav-link" id="profile" href="#/profile" ><u>Profile</u></a>
-  </div>
-  <div class="picture">
-    <h4>{{username}}</h4>
-    <img class="potrait" [src]='avatar'>
-  </div>
-  <div class="status">
-    <h5 *ngIf="!headline">What are you thinking?</h5>
-    <h5 *ngIf="headline" id="selfHeadline">{{headline}}</h5>
-  </div>
-  <div>
-    <form (ngSubmit) = "updateHeadline(headlineForm.valid)" #headlineForm=ngForm>
-      <input type="text" class="form-control" id="status" placeholder="New Status" [(ngModel)]="headlineText" name="newHeadline" aria-label="Recipient's username" aria-describedby="basic-addon2">
-      <button type="submit" class="btn btn-primary" id="updateHeadline">update</button>
-    </form>
+<div class="card">
+  <div class="avatart-boarder">
+    <img class="avatar" [src]="avatar">
+    <div>
+    <span id="username"><b>{{username}}</b></span>
+    </div>
+    <div id="hLD">
+    <span *ngIf="!headline" class="card-text" class="selfHeadline">What are you thinking?</span>
+    <span *ngIf="headline" class="selfHeadline" >{{headline}}</span>
+    </div>
   </div>
 
+  <div id="update">
+    <form  (ngSubmit) = "updateHeadline(headlineForm.valid)" #headlineForm=ngForm>
+    <input type="text" class="form-control" id="status" placeholder="New Status" [(ngModel)]="headlineText" name="newHeadline" aria-label="Recipient's username" aria-describedby="basic-addon2">
+    <button type="submit" class="btn btn-outline-dark" id="updateHeadline">update</button>
+    </form>
+  </div>
 </div>
+
