--- a/src/app/profile/profile.component.css
+++ b/src/app/profile/profile.component.css
@@ -1,21 +1,34 @@
-img {
-  width: 200px;
-  border-radius:20px;
-  border-style: ridge;
-  margin:10px;
+.container {
+  margin-top: 120px;
+}
+
+.avatar {
+  vertical-align: middle;
+  width: 150px;
+  clip-path: circle();
 }
 
 #portrait {
   padding: 20px;
 }
 
-.img {
-  text-align: left;
-}
 .ng-valid[required], .ng-valid.required  {
   border-left: 5px solid #42A948; /* green */
 }
 
 .ng-invalid:not(form)  {
   border-left: 5px solid #a94442; /* red */
+}
+
+.card {
+  padding: 10px;
+}
+
+#accountName {
+  margin-left: 30px;
+  font-size:20px;
+}
+
+#avatar {
+  text-align: center;
 }
